[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/AlbumFotos/SetaEsquerda.png" type="Texture" id=1]
[ext_resource path="res://Interface/AlbumFotos/AlbumFotos.gd" type="Script" id=2]
[ext_resource path="res://Interface/Fade.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/tema.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[node name="AlbumFotos" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="TelaAlbum" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="TelaAlbum"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MargemBarraTitulo" type="MarginContainer" parent="TelaAlbum/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 48.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="FundoTitulo" type="Panel" parent="TelaAlbum/VBoxContainer/MargemBarraTitulo"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 38.0
custom_styles/panel = SubResource( 1 )

[node name="MargemTextoTitulo" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemBarraTitulo"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 38.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextoTitulo" type="Label" parent="TelaAlbum/VBoxContainer/MargemBarraTitulo/MargemTextoTitulo"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 1250.0
margin_bottom = 18.0
text = "Nome do animal aqui"
align = 1

[node name="MargemAlbum" type="MarginContainer" parent="TelaAlbum/VBoxContainer"]
margin_top = 52.0
margin_right = 1280.0
margin_bottom = 594.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum"]
margin_left = 10.0
margin_right = 1270.0
margin_bottom = 542.0
size_flags_vertical = 3

[node name="MargemFotos" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer"]
margin_right = 672.0
margin_bottom = 542.0
size_flags_horizontal = 3

[node name="FundoFotos" type="Panel" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemFotos"]
margin_right = 672.0
margin_bottom = 542.0
custom_styles/panel = SubResource( 1 )

[node name="MargemFotosItens" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemFotos"]
margin_right = 672.0
margin_bottom = 542.0
rect_min_size = Vector2( 672, 0 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="GradeFotos" type="GridContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemFotos/MargemFotosItens"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 662.0
margin_bottom = 532.0
columns = 4

[node name="MargemDescricao" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer"]
margin_left = 676.0
margin_right = 1260.0
margin_bottom = 542.0
size_flags_horizontal = 3
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao"]
margin_left = 5.0
margin_right = 584.0
margin_bottom = 542.0
size_flags_horizontal = 3

[node name="FundoNomeCientifico" type="PanelContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer"]
margin_right = 579.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 1 )

[node name="MargemNomeCientifico" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoNomeCientifico"]
margin_right = 579.0
margin_bottom = 28.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextoNomeCientifico" type="Label" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoNomeCientifico/MargemNomeCientifico"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 569.0
margin_bottom = 18.0
size_flags_vertical = 3
autowrap = true

[node name="FundoPerigo" type="PanelContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer"]
margin_top = 32.0
margin_right = 579.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 1 )

[node name="MargemTextoPerigo" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoPerigo"]
margin_right = 579.0
margin_bottom = 28.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextoPerigo" type="Label" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoPerigo/MargemTextoPerigo"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 569.0
margin_bottom = 18.0
size_flags_vertical = 3
autowrap = true

[node name="FundoDescricao" type="PanelContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer"]
margin_top = 64.0
margin_right = 579.0
margin_bottom = 301.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MargemTextoDescricao" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoDescricao"]
margin_right = 579.0
margin_bottom = 237.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextoDescricao" type="Label" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoDescricao/MargemTextoDescricao"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 569.0
margin_bottom = 227.0
size_flags_vertical = 3
text = "fjasdklfjaklsdfasdfasdfjaskldfjklasjkldfjklajlksdfjkljklasdfjkljklasdjklfljkasjkldfjklasdfjkllajksdfjklajklsdfjlkaljksljkasddjklkkkkkkkkkkkkdfaklsdfjkasjkdfjkasjdkflaçsdjklf
"
autowrap = true

[node name="FundoImagemReal" type="PanelContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer"]
margin_top = 305.0
margin_right = 579.0
margin_bottom = 542.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MargemImagemReal" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoImagemReal"]
margin_right = 579.0
margin_bottom = 237.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ImagemReal" type="TextureRect" parent="TelaAlbum/VBoxContainer/MargemAlbum/HBoxContainer/MargemDescricao/VBoxContainer/FundoImagemReal/MargemImagemReal"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 569.0
margin_bottom = 227.0
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="TelaAlbum/VBoxContainer"]
margin_top = 598.0
margin_right = 1280.0
margin_bottom = 626.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Pontuacao" type="Label" parent="TelaAlbum/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 18.0
text = "Sua pontuação: 100000 pontos"
align = 1

[node name="MargemBotoes" type="MarginContainer" parent="TelaAlbum/VBoxContainer"]
margin_top = 630.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TelaAlbum/VBoxContainer/MargemBotoes"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 70 )
alignment = 1

[node name="BotaoVoltar" type="Button" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer"]
unique_name_in_owner = true
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 0 )

[node name="MargemIcone" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoVoltar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Icone" type="TextureRect" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoVoltar/MargemIcone"]
margin_left = 5.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 65.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Separador" type="Control" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer"]
margin_left = 74.0
margin_right = 463.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="BotaoIrParaJogo" type="Button" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer"]
margin_left = 467.0
margin_right = 630.0
margin_bottom = 70.0
text = "Jogar Novamente"

[node name="Separador3" type="Control" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer"]
margin_left = 634.0
margin_right = 654.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 0 )

[node name="BotaoIrMenuPrincipal" type="Button" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer"]
margin_left = 658.0
margin_right = 793.0
margin_bottom = 70.0
text = "Menu Principal"

[node name="Separador2" type="Control" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer"]
margin_left = 797.0
margin_right = 1186.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="BotaoContinuar" type="Button" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1190.0
margin_right = 1260.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 0 )

[node name="MargemIcone" type="MarginContainer" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoContinuar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Icone" type="TextureRect" parent="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoContinuar/MargemIcone"]
margin_left = 5.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 65.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
flip_h = true

[node name="TelaAlbumVazia" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MargemConteudo" type="MarginContainer" parent="TelaAlbumVazia"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TelaAlbumVazia/MargemConteudo"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0

[node name="PainelTexto" type="Panel" parent="TelaAlbumVazia/MargemConteudo/VBoxContainer"]
margin_right = 984.0
margin_bottom = 526.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TelaAlbumVazia/MargemConteudo/VBoxContainer/PainelTexto"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="TelaAlbumVazia/MargemConteudo/VBoxContainer/PainelTexto/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1067.0
margin_bottom = 516.0

[node name="Label" type="Label" parent="TelaAlbumVazia/MargemConteudo/VBoxContainer/PainelTexto/MarginContainer/HBoxContainer"]
margin_right = 964.0
margin_bottom = 506.0
size_flags_vertical = 3
text = "Seu album está vazio

Você tirou foto de nenhum animal!

Lembre de mirar sua câmera para um animal quando ele aparecer e clicar com o botão esquerdo do mouse para tirar uma foto!"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="TelaAlbumVazia/MargemConteudo/VBoxContainer"]
margin_top = 530.0
margin_right = 984.0
margin_bottom = 560.0
custom_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TelaAlbumVazia/MargemConteudo/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 984.0
margin_bottom = 30.0
alignment = 1

[node name="BotaoIrParaJogo" type="Button" parent="TelaAlbumVazia/MargemConteudo/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 392.0
margin_right = 592.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
text = "Tentar Novamente"

[node name="Fade" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
[connection signal="pressed" from="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoIrParaJogo" to="." method="_on_BotaoIrParaJogo_pressed"]
[connection signal="pressed" from="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoIrMenuPrincipal" to="." method="_on_BotaoIrMenuPrincipal_pressed"]
[connection signal="pressed" from="TelaAlbum/VBoxContainer/MargemBotoes/HBoxContainer/BotaoContinuar" to="." method="_on_BotaoContinuar_pressed"]
[connection signal="pressed" from="TelaAlbumVazia/MargemConteudo/VBoxContainer/MarginContainer/HBoxContainer/BotaoIrParaJogo" to="." method="_on_BotaoIrParaJogo_pressed"]
